Fixed misaligned spinner when absolute position is used.

--- a/web/css/components/_spinner.less
+++ b/web/css/components/_spinner.less
@@ -25,4 +25,7 @@
             }
         }
     }
+    ._block-content-loading {
+        position: relative;
+    }
 }
